tests/valid/enum/ref_lifetime_payload_match.facet
enum RefBox<'a> {
  Ref(unrestricted &'a unrestricted isize),
  Empty
}

fn get<'a>(x: unrestricted RefBox<'a>, fallback: unrestricted &'a unrestricted isize) -> unrestricted &'a unrestricted isize {
  match x {
    Ref(r) => r,
    Empty => fallback,
  }
}
