tests/invalid/enum/ref_lifetime_unknown_arg.facet
enum RefBox<'a> {
  Ref(unrestricted &'a unrestricted isize),
  Empty
}

fn make<'a>(r: unrestricted &'a unrestricted isize) -> unrestricted RefBox<'b> {
  RefBox<'a>::Ref(r)
}
